# LEPISZCZE

./: Makefile  README.md  dvc.yaml  pyproject.toml  run.sh
experiments/configs/datasets/: abusive_clauses.yaml  cbd.yaml  cst_wikinews.yaml  nkjp_ner.yaml
experiments/scripts/hps/: optimize_lightning_classification.py
experiments/scripts/tasks/: evaluate_lightning_classification.py  evaluate_lightning_sequence_labeling.py
lepiszcze/: setup.py
