[tool.poetry]
name = "lepiszcze"
version = "0.0.1"
description = ""
authors = [
    "Kamil Tagowski <kamil.tagowski@gmail.com>",
    "Albert Sawczyn <albertsawczyn@gmail.com>",
    "Denis Janiak <denis.janiak7@gmail.com>",
    "Łukasz Augustyniak <luk.augustyniak@gmail.com>",
    "Roman Bartusiak <riomus@gmail.com>",
]
packages = [
    { include = "lepiszcze" },
]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"
dvc = { version = "2.10.1" }
mlflow = "2.6.0"
clarinpl-embeddings = {"git" = "https://github.com/dkajtoch/embeddings.git"}
wandb = "0.15.8"
flair = "0.12.2"
fsspec = "2022.11.0"
s3fs = "2022.11.0"
protobuf = "3.20.x"
alembic = "1.11.3"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
mypy = "1.5.1"
black = "23.7.0"
isort = { version = "5.12.0", extras = ["pyproject"] }
pyflakes = "2.4.0"
poethepoet = "0.11.0"
types-requests = "2.26.1"
coverage = {extras = ["toml"], version = "^6.2"}
jupyter = "^1.0.0"

[tool.poe.tasks]
black = "black --check ./"
isort = "isort . -c"
black_fix = "black ./"
isort_fix = "isort . "
pyflakes = "pyflakes ."
mypy = "mypy --strict ."
coverage_test = "coverage run -m pytest"
coverage_report = "coverage report -m"
test = ["coverage_test", "coverage_report"]
check = ["black", "isort", "mypy", "pyflakes"]
fix = ["black_fix", "isort_fix"]
all = ["check", "test"]
force-torch-cuda = "python -m pip install torch==2.0.0+cu117 torchvision==0.15.1+cu117 torchaudio==2.0.1 --index-url https://download.pytorch.org/whl/cu117"

[tool.poetry.extras]
developer = ["black", "mypy", "typing-extensions"]

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
line-length = 100
exclude = "flair"

[tool.isort]
line_length = 100
known_first_party = "leaderboard"
known_third_party = ["click", "pytest"]
profile = "black"
skip = "flair"

[tool.mypy]
python_version = "3.9"
strict = true
exclude = "flair"

[[tool.mypy.overrides]]
module = [
    "flair.*",
    "mlflow",
    "numpy",
    "pandas",
    "sklearn.*",
    "srsly",
    "tqdm.*",
    "yaml"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "spacy.*",
    "torch.testing",
    "torch",
    "datasets"
]
implicit_reexport = true


# due to https://github.com/huggingface/transformers/issues/13390#issuecomment-934830946
[[tool.mypy.overrides]]
module = [
    "transformers"
]
follow_imports = "skip"
